# AutoCord

./: .gitignore  README.md  main.py  pyproject.toml
auth/: __init__.py
authcord/: __init__.py
bot/: __init__.py  commands.py  events.py  main.py  permissions.txt  util.py
web/: __init__.py  config.py  forms.py  login.py  models.py  processors.py
web/db/: admins.txt  commands.json  notifs.json  site.db
web/db/txt/: admins.txt
web/routes/: __init__.py  errors.py  logins.py  static.py
web/static/css/: accordion.css  support.css
web/static/js/: accordion.js  search.js
web/templates/: bot.html  dash.html  index.html  info.html  library.html  rules.html  submit.html
web/templates/errors/: 404.html  500.html
web/templates/layouts/: base.html
