[tool.poetry]
name = "autocord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
itsdangerous = "^1.1.0"
oauthlib = "^3.1.0"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-migrate = "^2.5.3"
flask-sqlalchemy = "^2.4.4"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
